trying for bar graph

--- a/app/templates/introduction.html
+++ b/app/templates/introduction.html
@@ -1,11 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2><p style = "font-family:arial"> Introduction</p> </h2>
-    <p style = "font-family:arial">
-    	The United Kingdom's Department for Transport reported 7,981 fatal road accidents in Great Britain from 2006 to 2008. These reports consist of two datasets: one involving information about the accident and the other holds the details of the fatal casualty. This dashboard contains visualizations and analysis for the monthly and hourly accident occurance, age and gender of fatality, and fatality types. 
+	<head>
+        <title>Introduction</title>
+    </head>
+    <body>
+    	<h2><p style = "font-family:arial"> Introduction</p> </h2>
+    	<p style = "font-family:arial">
+    		The United Kingdom's Department for Transport reported 7,981 fatal road accidents in Great Britain from 2006 to 2008. These reports consist of two datasets: one involving information about the accident and the other holds the details of the fatal casualty. This dashboard contains visualizations and analysis for the monthly and hourly accident occurance, age and gender of fatality, and fatality types. 
 
 
-    	Click the "Monthly and Hourly Trends" or "Age and Fatal Casualty Type" tabs to continue. 
-	</p>
+    		Click the "Monthly and Hourly Trends" or "Age and Fatal Casualty Type" tabs to continue. 
+		</p>
+	</body>
 {% endblock %}
