--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,18 +3,18 @@
         <title>Great Britian Fatal Accidents</title>
     </head>
     <header>
-        <h1>Great Britian Fatal Accidents</h1>
+        <h1><p style = "font-family:arial">Great Britian Fatal Accidents</p></h1>
         <div class = "container-fluid">
             <!-- Intro button -->
-            <a href="/introduction"><button type="button" class="btn btn-primary" aria-label="Left Align" style="margin-top: 5px; margin-bottom: 5px; height: 44px; margin-right: 15px">
+            <a href="/introduction"><button type="button" class="btn btn-primary" aria-label="Left Align" style="margin-top: 5px; margin-bottom: 5px; height: 44px; margin-right: 0px">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span> Introduction 
             </button></a>
             <!-- Trends button -->
-            <a href="/trends"><button type="button" class="btn btn-primary" aria-label="Right Align" style="margin-top: 5px; margin-bottom: 5px; height: 44px; margin-right: 15px">
+            <a href="/trends"><button type="button" class="btn btn-primary" aria-label="Right Align" style="margin-top: 5px; margin-bottom: 5px; height: 44px; margin-right: 0px">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span> Monthly and Hourly Trends 
             </button></a>
             <!-- Type button -->
-            <a href="/type"><button type="button" class="btn btn-primary" aria-label="Left Align" style="margin-top: 5px; margin-bottom: 5px; height: 44px; margin-right: 15px">
+            <a href="/type"><button type="button" class="btn btn-primary" aria-label="Left Align" style="margin-top: 5px; margin-bottom: 5px; height: 44px; margin-right: 0px">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span> Age and Fatal Casualty Type 
             </button></a>
         </div>
