--- a/app/templates/trends.html
+++ b/app/templates/trends.html
@@ -2,21 +2,23 @@
 
 {% block content %}
 
-<h2> Test text  </h2>
-<p>Ouput data: {{data}}</p>
-
-<style>
-
-	.line {
-  		fill: none;
-  		stroke: steelblue;
-  		stroke-width: 2px;
-	}
-</style>
+<head>
+    <title>Monthly and Hourly Trends</title>
+</head>
 <body>
-   	
+	<h2><p style = "font-family:arial"> Monthly and Hourly Trends</p> </h2>
 	<script src="https://d3js.org/d3.v5.min.js"></script>
-	<!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
+
+	<script type="text/javascript" src="{{url_for('static', filename='js/month_death.js')}}"></script>
+</body>
+<body>
+	<p style = "font-family:arial"> Test text to see where this shows up: The United Kingdom's Department for Transport reported 7,981 fatal road accidents in Great Britain from 2006 to 2008. These reports consist of two datasets: one involving information about the accident and the other holds the details of the fatal casualty. This dashboard contains visualizations and analysis for the monthly and hourly accident occurance, age and gender of fatality, and fatality types. 
+
+
+    	Click the "Monthly and Hourly Trends" or "Age and Fatal Casualty Type" tabs to continue.
+</body>
+<body>
 	<script type="text/javascript" src="{{url_for('static', filename='js/deaths.js')}}"></script>
+
 </body>
 {% endblock %}
