text changing again

--- a/app/templates/type.html
+++ b/app/templates/type.html
@@ -44,9 +44,9 @@ for(var i = 0; i < rad.length; i++) {
         if(this !== prev) {
             prev = this;
             string = this.value;
-            if (string ==='all'){
+            if (string ==='All'){
                 text = "Text here describing all graphs ";
-            }else if (string ==='female'){
+            }else if (string ==='Female'){
                 text = "Text here describing female graphs";
             }else{
                 text = "Text here describing male graphs ";
