--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,33 +1,52 @@
+{% extends 'bootstrap/base.html' %}
 
+{% block title %}Great Britian Fatal Accidents{% endblock %}
 
-<html>
-    <head>
+{% block navbar %}
+    <style>
+        /* Entire navbar background */
+        .navbar-default {
+            background-color: #202020;
+        }
+        /* "Great Britain Fatal Accidents" label text color */
+        .navbar-default .navbar-brand {
+            color: #A9A9A9;
+        }
+        /* "Great Britain Fatal Accidents" text color white when hover */
+        .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+            color: #ecf0f1;
+        }
+        /* Other tabs label text color */
+        .navbar-default .navbar-nav > li > a {
+            color: #A9A9A9;
+        }
+        /* Other tabs label color white when hover */
+        .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+            color: #ecf0f1;
+        }
 
-        <title>Great Britian Fatal Accidents</title>
-
-    </head>
-
-    <header>
-        <h1><p style = "font-family:arial">Great Britian Fatal Accidents</p></h1>
-        <div class = "container-fluid">
-            <!-- Intro button -->
-            <a href="/introduction"><button type="button" class="btn btn-primary" aria-label="Left Align" style="margin-top: 5px; margin-bottom: 5px; height: 44px; margin-right: 0px">
-                <span class="glyphicon glyphicon-off" aria-hidden="true"></span> Introduction 
-            </button></a>
-            <!-- Trends button -->
-            <a href="/trends"><button type="button" class="btn btn-primary" aria-label="Right Align" style="margin-top: 5px; margin-bottom: 5px; height: 44px; margin-right: 0px">
-                <span class="glyphicon glyphicon-off" aria-hidden="true"></span> Monthly and Hourly Trends 
-            </button></a>
-            <!-- Type button -->
-            <a href="/type"><button type="button" class="btn btn-primary" aria-label="Left Align" style="margin-top: 5px; margin-bottom: 5px; height: 44px; margin-right: 0px">
-                <span class="glyphicon glyphicon-off" aria-hidden="true"></span> Age and Fatal Casualty Type 
-            </button></a>
+    </style>
+    <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation </span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/about">Great Britain Fatal Accidents</a>
+            </div>
+            <div class="collapse navbar-collapse" id="#navbar">
+                <ul class="nav navbar-nav">
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/trends">Trends</a></li>
+                    <li><a href="/type">Age and Type</a></li>
+                </ul>
+            </div>
         </div>
+    </nav>
+{% endblock %}
 
-    </header>
 
-    <body>
-        {% block content %}{% endblock %}
-        
-    </body>
-</html>
+{% block content %}{% endblock %}
