--- a/app/templates/type.html
+++ b/app/templates/type.html
@@ -2,65 +2,86 @@
 
 {% block content %}
 
-<head>
-    <title>Age and Fatal Casualty Types</title>
-</head>
 <style>
     .bar {
       fill: steelblue;}
     .bar:hover {
       fill: rosybrown;}
     .axis--x path {
-        display: none;}
+      display: none;}
     .axis text {
-                font-family: sans-serif;
-                font-size: 6px;}
+      font-family: sans-serif;
+      font-size: 6px;}
     .toolTip {
-         position: absolute;
-         display: none;
-         min-width: 50px;
-         height: auto;
-         background: none repeat scroll 0 0 #ffffff;
-         border: 1px solid #6F257F;
-         padding: 5px;
-         text-align: center;}
+      position: absolute;
+      display: none;
+      min-width: 30px;
+      height: auto;
+      background: none repeat scroll 0 0 #ffffff;
+      border: 1px solid #6F257F;
+      padding: 3px;
+      text-align: center;}
+    .text{
+      margin-left: 40px;
+      margin-right: 40px;}
+    .plot{
+      margin-left: 30px;
+      margin-right: 30px;}
+    .title{
+      font-size:12px;
+      text-anchor: start;
+      fill: black;
+    }
+
 </style>
 <body>
+  <div class="text">
     <h2><p style = "font-family:arial">Age and Fatal Casualty Types</p></h2>
-     <p style = "font-family:arial"> Select an option:</p>
+    <p>Of the 8,656 fatal casualties reported, 2,155 were female, 6,500 were male, and one was unreported. Coupling this information with fatal casualty age, we can investigate whether certain ages and genders are more prone to fatalities and certain fatality types than others. After selecting an option for which population below, three graphs will appear. The first looks at the distribution of fatal casualties across ages. The second features the number of fatalities for each fatality type. And the last shows how the most frequent fatality type changes with age. 
+    </p>
+    <h5>Select an option:</h5>
     <form name="myForm">
-    <input type="radio" name="myRadios"  value="All" >All</value>
-    <input type="radio" name="myRadios"  value="Male" >Male</value>
-    <input type="radio" name="myRadios"  value="Female" >Female</value>
+      <input type="radio" name="myRadios"  value="All" >     All     </value>
+      <input type="radio" name="myRadios"  value="Male" >     Male     </value>
+      <input type="radio" name="myRadios"  value="Female" >     Female     </value>
     </form>
-Analysis: <span id="source"></span>
+    <br>
+  </div>
+  <!-- Fatal Count by Age text and graph -->
+  <div class="text" style="width: 93%; height: 100px; background-color: #eee">
+    <p id="textFatalCountAge"></p>
+  </div>
+  <br>
+  <div class="plot">
+    <svg id="fatalCountAge"></svg>
+  </div>
+  <br>
+  <br>
+  <!-- Fatal Type by Count text and graph -->
+  <div class="text" style="width: 93%; height: 100px; background-color: #eee">
+    <p id="textFatalTypeCount"></p>
+  </div>
+  <br>
+  <div class="plot">
+    <svg id="fatalTypeCount"></svg>
+  </div>
+  <br>
+  <br>
+  <!-- Fatal Type by Age text and graph -->
+  <div class="text" style="width: 93%; height: 100px; background-color: #eee">
+    <p id="textFatalTypeAge"></p>
+  </div>
+  <br>
+  <div class="plot">
+    <svg id="fatalTypeAge"></svg>
+  </div>
+  <br>
+  <br>
+  
 
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script type="text/javascript" src="{{url_for('static', filename='js/type.js')}}"></script>
 </body>
-<script type="text/javascript">
-
-let sourceField = document.getElementById('source');
-let rad = document.myForm.myRadios;
-let prev = null;
-for(let i = 0; i < rad.length; i++) {
-    rad[i].onclick = function() {
-        if(this !== prev) {
-            prev = this;
-            string = this.value;
-            if (string ==='All'){
-                text = "Text here describing all graphs ";
-            }else if (string ==='Female'){
-                text = "Text here describing female graphs";
-            }else{
-                text = "Text here describing male graphs ";
-            };
-            sourceField.textContent = text;
-        };
-    };
-};
-</script>
-
-<script src="https://d3js.org/d3.v5.min.js"></script>
-<script type="text/javascript" src="{{url_for('static', filename='js/type.js')}}"></script>
 
 
 {% endblock %}
