--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% set active_page = "about" %}
+
 {% block content %}
     <div style="margin-left: 40px; margin-right:40px;">
         <h2><p style = "font-family:arial"> About</p> </h2>
