--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
         }
         /* "Great Britain Fatal Accidents" label text color */
         .navbar-default .navbar-brand {
-            color: #A9A9A9;
+            color: #BEBEBE;
         }
         /* "Great Britain Fatal Accidents" text color white when hover */
         .navbar-default .navbar-brand:hover, 
@@ -20,32 +20,64 @@
         }
         /* Other tabs label text color */
         .navbar-default .navbar-nav > li > a {
-            color: #A9A9A9;
+            color: #BEBEBE;
         }
         /* Other tabs label color white when hover */
         .navbar-default .navbar-nav > li > a:hover, 
         .navbar-default .navbar-nav > li > a:focus {
             color: #ecf0f1;
         }
+
+        .navbar-default .navbar-nav > .active > a {
+        	background-color:#404040; 
+        	color: #DCDCDC;
+        }
+
+        .navbar-default .navbar-nav > .active > a:hover,
+		.navbar-default .navbar-nav > .active > a:focus {
+			background-color:#404040;
+			color: #ecf0f1;
+		}
+
     </style>
     <nav class="navbar navbar-default">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-target="#navbar" aria-expanded="false">
-                <span class="sr-only">Toggle navigation </span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="/about">Great Britain Fatal Accidents</a>
         </div>
         <div class="collapse navbar-collapse" id="#navbar">
             <ul class="nav navbar-nav">
-                <li><a href="/about">About</a></li>
-                <li><a href="/trends">Trends</a></li>
-                <li><a href="/type">Age and Type</a></li>
+                <li class="{{ 'active' if active_page == 'about' else '' }}"><a href="/about">About</a></li>
+                <li class="{{ 'active' if active_page == 'trends' else '' }}"><a href="/trends">Trends</a></li>
+                <li class="{{ 'active' if active_page == 'type' else '' }}"><a href="/type">Age and Type</a></li>
             </ul>
         </div>
     </nav>
+
+<!--     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+            </ul>
+        </div>
+    </nav> -->
 {% endblock %}
 
 
