--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -5,12 +5,9 @@
 {% block content %}
     <div style="margin-left: 40px; margin-right:40px;">
         <h2><p style = "font-family:arial"> About</p> </h2>
-         The United Kingdom's Department for Transport reported 7,981 fatal road accidents in Great Britain from 2006 to 2008. These accidents caused 15,429 total casualties, with 8,656 of those casualities being fatal. Each report included information about month and hour of accident, age and gender of the fatal casualty, and fatality type. 
+         The United Kingdom's Department for Transport reported 7,981 fatal road accidents in Great Britain from 2006 to 2008. These accidents caused 15,429 total casualties, with 8,656 of those casualties being fatal. Each report included information about month and hour of the accident, age and gender of the fatal casualty, and fatality type.
         <br>
         <br>
-         This dashboard contains data visualizations and analysis for the United Kingdom's Department for Transport Fatal Accident Report to see monthly and hourly time trends, if certain genders and ages have more fatal casualties than others, and which fatality type is most frequent. [insert interesting questions that will be answered or give a short summary of the findings]
-        <br>
-        <br>
-        Continue exploring the analysis in <a href="/trends">Trends</a> or <a href="/type">Age and Type</a>. 
+         This dashboard contains data visualizations and analysis for the United Kingdom's Department for Transport Fatal Accident Report to see monthly and hourly time trends, if certain genders and ages have more fatal casualties than others, and which fatality type is most frequent. Continue exploring the analysis in <a href="/trends">Trends</a> or <a href="/type">Age and Type</a>. 
     </div>
 {% endblock %}
