--- a/app/templates/type.html
+++ b/app/templates/type.html
@@ -39,7 +39,7 @@
 <body>
   <div class="text">
     <h2><p style = "font-family:arial">Age and Fatal Casualty Types</p></h2>
-    <p>Of the 8,656 fatal casualties reported, 2,155 were female, 6,500 were male, and one was unreported. Coupling this information with fatal casualty age, we can investigate whether certain ages and genders are more prone to fatalities and certain fatality types than others. After selecting an option for which population below, three graphs will appear. The first looks at the distribution of fatal casualties across ages. The second features the number of fatalities for each fatality type. And the last shows how the most frequent fatality type changes with age. 
+    <p>Of the 8,656 fatal casualties reported, 2,155 were female, 6,500 were male, and one was unreported. Coupling this information with fatal casualty age, we can investigate whether certain ages and genders were more prone to fatalities and certain fatality types than others. The three graphs below show different distributions for the selected population — the first looks at the diffusion of fatal casualties across ages. The second features the number of fatalities for each fatality type. And the last shows how the most frequent fatality type changes with age.
     </p>
     <h5>Select an option:</h5>
     <form name="myForm">
@@ -49,8 +49,8 @@
     </form>
     <br>
   </div>
-  <!-- Fatal Count by Age text and graph -->
-  <div class="text" style="width: 93%; height: 100px; background-color: #eee">
+  <!-- Fatal Count by Age text and graph 15%-->
+  <div class="text" style="width: 93%; height: 85px;">
     <p id="textFatalCountAge"></p>
   </div>
   <br>
@@ -60,7 +60,7 @@
   <br>
   <br>
   <!-- Fatal Type by Count text and graph -->
-  <div class="text" style="width: 93%; height: 100px; background-color: #eee">
+  <div class="text" style="width: 93%; height: 70px;">
     <p id="textFatalTypeCount"></p>
   </div>
   <br>
@@ -70,7 +70,7 @@
   <br>
   <br>
   <!-- Fatal Type by Age text and graph -->
-  <div class="text" style="width: 93%; height: 100px; background-color: #eee">
+  <div class="text" style="width: 93%; height: 75px;">
     <p id="textFatalTypeAge"></p>
   </div>
   <br>
